--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -21,8 +21,7 @@
     gap: 1rem;
   }
   .header-wrapper {
-    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.9), transparent),
-      url("./images/header-image.jpg"); /* Update the URL as needed */
+    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.9), transparent);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -35,7 +34,7 @@
   }
   
   .header-text {
-    padding-top: 30vh;
+    /* padding-top: 30vh; */
   }
   
   .buttons-container {
@@ -61,7 +60,11 @@
     background-color: #e74c3c;
   }
   
-  .btn-con
+  .header-logo {
+    z-index: -1;
+    max-width: 100vw;
+    max-height: 60vh;
+  }
   
   /* End of Header Section */
   
