--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -152,3 +152,13 @@ button:hover {
     background-color: #007bff; /* Change background color to blue on hover */
   }
 
+  .footer-logo {
+    max-height: 30vh;
+    margin-left: 10vw;
+  }
+
+  .logo-and-contact {
+    display: flex;
+  
+  }
+
